--- a/prvičas.html
+++ b/prvičas.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>esselamu alejkum</h1>
+    <h1>esselamu alejkum ve rahmetullahi ve berakatuhu</h1>
 
 </body>
 </html>
